# blog

./: .gitignore  .gitmodules  .gitpod.yml  .yapfignore  batch_operation.ipynb  blog.py  blogger.py  check empty post  clear.sh  copy_to.sh  git.sh  init.sh  j  j.txt  launch_jupyterlab.sh  link_conf.sh  local.sh  main.py  pelican.sh  post.py  pyproject.toml  readme.md  setup.cfg  sqlite3.ipynb  utils.py  words.json  words.yaml
.github/workflows/: publish.yml
.idx/: dev.nix
blog/: blog.py  blogger.py  utils.py
blog/cn/: pconf.py
blog/en/: pconf.py
blog/home/: pconf.py
blog/misc/: pconf.py
blog/misc/content/2021/03/: pyproject.toml
blog/misc/content/2021/03/boolean-column-operators-and-functions-in-spark/: boolean-column-operators-and-functions-in-spark.ipynb
blog/misc/content/2021/03/poker-game-in-casinos/: poker-game-in-casinos.markdown
blog/outdated/: pconf.py
cn/: pconf.py  pconf_l2.py  pconf_s2.py
cn/content/: 2012-06-13-what-do-email.markdown  2013-04-08-hacker.markdown  2013-04-08-thoughts-about-life.markdown  2013-08-08-guo-you-bi-ji-he-wang.markdown  2013-08-14-poems.markdown  2013-08-14-xiong-wu-da-zhi.markdown
cn/pages/: about.markdown  resume.markdown
en/: pconf.py  pconf_l2.py  pconf_ld.py  pconf_s2.py  sed.sh
en/content/: 2010-05-13-inverse-of-matrix.markdown  2010-05-15-generating-functions.markdown  2010-05-15-sun-bin-pang-juan.markdown  2010-05-22-best-strategy.markdown  2010-05-22-how-long-observe-pattern.markdown  2010-05-23-first-prime.markdown  2010-11-20-combination-and-permutation-in-r.markdown  2010-11-20-general-tips-for-latex.markdown  2010-11-21-alike-objects-in-r.markdown  2010-11-21-functions-and-calls-in-r.markdown  2011-08-28-tips-for-excel.markdown  2011-08-31-tips-vb.net.markdown  2011-12-08-bug-in-mathematica.markdown  2012-04-22-arrayQualityMetrics.markdown  2012-04-30-install-software-linux.markdown  2012-05-16-abuse-vector-r.markdown  2012-05-16-bessel-first-property.markdown  2012-05-16-pass-array-r-other-language.markdown  2012-05-16-r-interface-other-languages.markdown  2012-05-18-vector-arraylist-difference-java.markdown  2012-05-19-linux-read-cpu-temperature.markdown  2012-05-21-compress-and-decompress-in-linux.markdown  2012-05-22-containers-summary-in-popular-languages.markdown  2012-05-22-work-remotely-linux.markdown  2012-05-26-missing-grub-windows.markdown  2012-05-27-valid-email-address-java.markdown  2012-06-02-texstudio-bravo.markdown  2012-06-03-ruby-read-pdf.markdown  2012-06-04-automated-verizon-bill-using-ruby.markdown  2012-06-05-good-ways-scientific-computing.markdown  2012-06-05-online-tools-programming-language.markdown  2012-06-05-summary-parallel-computing.markdown  2012-06-05-summary-string-popular-programming-language.markdown  2012-06-07-send-email-ruby.markdown  2012-06-08-overload-operator-r.markdown  2012-06-08-softwares-windows.markdown  2012-06-09-call-java-in-r.markdown  2012-06-10-develop-r-packages-using-roxygen2.markdown  2012-06-11-parallel-computing-java.markdown  2012-06-13-ssh-copy-id.markdown  (+172 more)
en/content/2021/04/hands-on-python-library-toml/: hands-on-python-library-toml.ipynb  pyproject.toml
en/pages/: about.markdown  resume.markdown
home/: CNAME  pconf.py  pconf_l0.py  pconf_ld.py  pconf_s0.py  pconf_sd.py  publishconf.py
home/media/: archives.sh  config_docker.sh  config_ubuntu.sh  download_code_server.py  github_release.py  install_py_github.py  notebooks.ai.sh
home/pages/: about.markdown  index.markdown
misc/: CNAME  ads.txt  pconf.py  pconf_l2.py  pconf_s2.py  pconf_sd.py
misc/content/: .2019-02-22-data-quality.markdown.swo  .gitignore  2009-11-01-format-data-in-sas.markdown  2009-11-01-general-tips-for-sas.markdown  2009-11-01-macro-in-sas.markdown  2010-11-20-general-tips-for-latex.markdown  2012-04-22-first-python.markdown  2012-05-17-java-difference-abstract-interface.markdown  2012-06-05-free-online-tools-for-developers.markdown  2012-06-08-softwares-windows.markdown  2012-06-10-git-commands.markdown  2012-06-10-operators-popular-language.markdown  2012-07-11-sas-data-manipulation.markdown  2012-08-16-useful-tools-linux.markdown  2012-09-01-tips-windows.markdown  2012-09-27-cool-shell-commands.markdown  2012-10-21-const-and-static-variables-in-cpp.markdown  2012-10-21-good-cpp-libraries.markdown  2012-10-21-template-meta-programming.markdown  2012-10-22-containers-in-java.markdown  (+1225 more)
misc/content/2022/08/parse-toml-files-in-golang/: parse-toml-files-in-golang.ipynb  pyproject.toml
outdated/: CNAME  pconf.py
sqlite3/: explore_blog_db.ipynb  split.ipynb  split.sqlite3  upsert.ipynb
themes/: template.ipynb
themes/haerwu/: LICENSE  (+1 more)
tmp/: go_get_user.ipynb  go_string_utf8.ipynb  js.ipynb  parse.ipynb
to_do/: 2014-09-03-chat-with-yifan-on-wechat.markdown  get_rid_of_smell.txt
trash/: 2013-03-22-aggregation.markdown  2013-10-21-statistics-questions.markdown  2013-10-21-wget-tips.markdown  2013-12-31-nomachine-tips.markdown  2017-04-17-working-with-a-cluster-of-servers.markdown  2019-10-16-exception-and-error-handling-in-python.markdown  2020-01-17-deep-learning-rules-of-thumb.markdown  2020-02-25-image-processing-technics.markdown  data-interchange-format.md  general-tips-for-engineering.markdown  good-tutorials-for-investment.markdown  great-tools-developed-in-rust.md  kdevelop-tips.md  language-server-for-vim.md  nimade.md  notes-taking-solutions.md  obtain-information-freely.md  on-the-init-process-issue-of-docker.markdown  precedence-of-operators-in-regular-expression.markdown  proxy-server-tools.md  python-pandas-reindex.ipynb  r-questions.md  read-parquet-files-in-python.md  rust-for-big-data.markdown  rust-for-distributed-applications.md  spark-issue:-RuntimeError:-Result-vector-of-pandas_udf-was-not-the-required-length.markdown  spark-issue:-error:-Found-argument-which-was-not-expected.md  summary-of-python-linting-tools.markdown  text-to-uml-tools.markdown  tips-for-living-in-bellevue.md  tips-on-citi-banking.md  tips-on-observability.md  tips-on-weboob.md  tmp.ipynb  useful-python-dev-dependencies.md  useful-rust-crates-for-binary-encoding.md
(+3328 files in other folders)
