[project]
name = "blog"
version = "0.1.0"
description = "Ben Du's personal blog."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiutil>=0.83.0",
    "loguru>=0.7.3",
    "pelican>=4.11.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytype>=2024.10.11",
    "ruff>=0.11.8",
]

